--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "popper.js": "^1.15.0",
     "vee-validate": "^2.2.15",
+    "vue": "^2.6.11",
     "vue-lodash": "^2.1.2",
     "vue-router": "^3.0.3",
     "vuelidate": "^0.7.5",
